pets pets-histories ok

--- a/app/views/pet_histories/index.html.erb
+++ b/app/views/pet_histories/index.html.erb
@@ -2,9 +2,10 @@
 
 <h1>Pet Histories</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
+      <th>Name Pets</th>
       <th>Weight</th>
       <th>Heigth</th>
       <th>Description</th>
@@ -15,6 +16,7 @@
   <tbody>
     <% @pet_histories.each do |pet_history| %>
       <tr>
+        <td> <%= pet_history.pet %></td>
         <td><%= pet_history.weight %></td>
         <td><%= pet_history.heigth %></td>
         <td><%= pet_history.description %></td>
@@ -27,5 +29,5 @@
 </table>
 
 <br>
-
+<%= link_to 'Pet list', pets_path %> | 
 <%= link_to 'New Pet History', new_pet_history_path %>
