--- a/app/views/pet_histories/_form.html.erb
+++ b/app/views/pet_histories/_form.html.erb
@@ -26,6 +26,12 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :pet_id %>
+    <%= form.select :pet_id, options_for_select(@pet)%>
+  </div>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
