--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -2,13 +2,14 @@
 
 <h1>Pets</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Name</th>
       <th>Race</th>
       <th>Birthdate</th>
-      <th>Visitas</th>
+      <th>Visit</th>
+      <th>Histories</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,26 @@
         <td><%= pet.race %></td>
         <td><%= pet.birthdate %></td>
         <td><%= pet.history_count%></td>
+        <td>
+          <table width=100%>
+            <% pet.pet_histories.each do |pet_history| %>
+              <tr> 
+                <td >
+                  <b>Description:</b>
+                  <%= pet_history.description %>
+                </td>
+                <td>
+                  <b>Weight</b>
+                  <%= pet_history.weight %>
+                </td>
+                <td>
+                  <b>Height</b>
+                  <%= pet_history.heigth %>
+                </td>
+              </tr>
+            <% end %>
+          </table>
+        </td>
         <td><%= link_to 'Show', pet %></td>
         <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
         <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -29,5 +50,5 @@
 </table>
 
 <br>
-
+<%= link_to 'Pet histories', pet_histories_path %> | 
 <%= link_to 'New Pet', new_pet_path %>
