--- a/app/views/pet_histories/_form.html.erb
+++ b/app/views/pet_histories/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="form-group">
     <%= form.label :pet_id %>
-    <%= form.select :pet_id, options_for_select(@pet)%>
+    <%= form.select :pet_id, options_for_select(@pets)%>
   </div>
 
 
