--- a/app/views/pet_histories/index.html.erb
+++ b/app/views/pet_histories/index.html.erb
@@ -29,5 +29,5 @@
 </table>
 
 <br>
-<%= link_to 'Pet list', pets_path %> | 
+<%= link_to 'Clients List', clients_path %> |
 <%= link_to 'New Pet History', new_pet_history_path %>
