--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -41,14 +41,15 @@
             <% end %>
           </table>
         </td>
-        <td><%= link_to 'Show', pet %></td>
-        <td><%= link_to 'Edit', edit_pet_path(pet) %></td>
-        <td><%= link_to 'Destroy', pet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', client_pet_path(@client, pet) %></td>
+        <td><%= link_to 'Edit', edit_client_pet_path(@client, pet) %></td>
+        <td><%= link_to 'Destroy', client_pet_path(@client, pet), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<%= link_to 'Back', clients_path %> |
 <%= link_to 'Pet histories', pet_histories_path %> | 
-<%= link_to 'New Pet', new_pet_path %>
+<%= link_to 'New Pet', new_client_pet_path(@client) %> | 
